--- a/config.org
+++ b/config.org
@@ -220,6 +220,11 @@ Functions come from Harry Schwartz.  Most workflows start with one of these.
   (add-hook 'dired-mode-hook
             (lambda ()
               (dired-hide-details-mode 1)))
+
+  (add-hook 'eshell-mode-hook
+            (lambda ()
+              (abbrev-mode 1)
+              (display-line-numbers-mode 1)))
 #+END_SRC
 
 * enable recent file tracking
