Change keybinding for ace-window for Windows

--- a/config.org
+++ b/config.org
@@ -607,5 +607,5 @@ This [[https://twitter.com/xenodium/status/1082020496466690048][tweet]] from Alv
     (setq aw-char-position (quote left))
     (custom-set-faces
      '(aw-leading-char-face ((t (:foreground "red" :height 3.0)))))
-    :bind ("<XF86Launch7>" . ace-window))
+    :bind ("<f16>" . ace-window))
 #+END_SRC
