--- a/config.org
+++ b/config.org
@@ -321,6 +321,7 @@ I don't want to confirm every time babel evaluates.
 #+BEGIN_SRC emacs-lisp
   (setq org-agenda-files (quote ("~/org/ephemera.org" "~/org/kanban.org" "~/org/notes.org")))
   (setq org-export-with-toc nil)
+  (setq org-html-postamble nil)
   (setq org-cycle-separator-lines 1)
   (setq org-confirm-babel-evaluate nil)
   (setq org-publish-project-alist
