--- a/config.org
+++ b/config.org
@@ -351,6 +351,10 @@ I don't want to confirm every time babel evaluates.
   (add-to-list 'org-structure-template-alist
                '("E" "#+BEGIN_SRC emacs-lisp\n?\n#+END_SRC"))
 
+  (org-babel-do-load-languages
+   'org-babel-load-languages
+   '((emacs-lisp . t)
+     (python . t)))
 #+END_SRC
 
 * navigation within a file
