--- a/exwm.org
+++ b/exwm.org
@@ -42,7 +42,8 @@ Aritra Bhattacharjee's [[https://youtu.be/Y9BM_mIRHJk][video]] on exotica-theme
   (use-package tao-theme
     :ensure t)
 
-  (load-theme 'deeper-blue)
+;;  (load-theme 'deeper-blue)
+  (load-theme 'manoj-dark)
 #+END_SRC
 
 * default browser
