--- a/exwm.org
+++ b/exwm.org
@@ -28,20 +28,29 @@ Ambrevar's exwm [[https://github.com/Ambrevar/dotfiles/blob/master/.emacs.d/lisp
 
 * themes
 
-Aritra Bhattacharjee's [[https://youtu.be/Y9BM_mIRHJk][video]] on exotica-theme
+Protesilaos Stavrou has published his accessible [[https://gitlab.com/protesilaos/modus-themes][themes]] on MELPA.  They are on display in his Emacs [[https://www.youtube.com/channel/UC0uTPqBCFIpZxlz_Lv1tk_g][videos]].
 
 #+BEGIN_SRC emacs-lisp :tangle yes
-  (use-package exotica-theme
+  (use-package modus-operandi-theme
     :ensure t)
 
-  (use-package solarized-theme
-    :ensure t
-    :config
-    (setq solarized-high-contrast-mode-line t))
-
-  (use-package tao-theme
+  (use-package modus-vivendi-theme
     :ensure t)
 
+  (load-theme 'modus-vivendi)
+
+  (defun prot/modus-themes-toggle ()
+      "Simplistic toggle for my Modus Themes.  All it does is check
+  if `modus-operandi' (light version) is active and if so switch to
+  `modus-vivendi' (dark version).  Else it switches to the light
+  theme."
+      (interactive)
+      (if (eq (car custom-enabled-themes) 'modus-operandi)
+          (load-theme 'modus-vivendi t)
+        (load-theme 'modus-operandi t)))
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp :tangle no
   (load-theme 'manoj-dark)
 #+END_SRC
 
