--- a/config.org
+++ b/config.org
@@ -3,7 +3,7 @@
   (defun js/version ()
     "Provides the version number of the init file."
     (interactive)
-    (message "init version 15"))
+    (message "init version 16"))
 #+END_SRC
 
 * credits
@@ -755,4 +755,28 @@ m m and Z P will clobber this with calc.el (like custom.el).
    (define-key calc-mode-map "ze" 'calc-myround)
   ))
 
+#+END_SRC
+
+* theme
+
+Protesilaos Stavrou has published his accessible [[https://gitlab.com/protesilaos/modus-themes][themes]] on MELPA.  They are on display in his Emacs [[https://www.youtube.com/channel/UC0uTPqBCFIpZxlz_Lv1tk_g][videos]].
+
+#+BEGIN_SRC emacs-lisp
+  (use-package modus-operandi-theme
+    :ensure t)
+
+  (use-package modus-vivendi-theme
+    :ensure t)
+
+  (load-theme 'modus-vivendi)
+
+  (defun prot/modus-themes-toggle ()
+      "Simplistic toggle for my Modus Themes.  All it does is check
+  if `modus-operandi' (light version) is active and if so switch to
+  `modus-vivendi' (dark version).  Else it switches to the light
+  theme."
+      (interactive)
+      (if (eq (car custom-enabled-themes) 'modus-operandi)
+          (load-theme 'modus-vivendi t)
+        (load-theme 'modus-operandi t)))
 #+END_SRC
