Add display functions to prevent pop ups

--- a/config.org
+++ b/config.org
@@ -704,7 +704,9 @@ Another helpful reddit [[https://www.reddit.com/r/emacs/comments/cpdr6m/any_addi
   (setq display-buffer-alist
         '(("\\*Help" (display-buffer-same-window))
           ("\\*Apropos" (display-buffer-same-window))
-          ("\\*helpful" (display-buffer-same-window))))
+          ("\\*helpful" (display-buffer-same-window))
+          ("\\*info" (display-buffer-same-window display-buffer-use-some-window))
+          ("\\*Org ASCII" (display-buffer-use-some-window))))
 #+END_SRC
 
 * reformatter
