--- a/config.org
+++ b/config.org
@@ -464,7 +464,8 @@ I don't want to confirm every time babel evaluates.
 
 #+BEGIN_SRC emacs-lisp
   (use-package helpful
-    :ensure t)
+    :ensure t
+    :bind ("C-c h" . helpful-at-point))
 #+END_SRC
 
 * disable mouse
