--- a/config.org
+++ b/config.org
@@ -730,6 +730,7 @@ Another helpful reddit [[https://www.reddit.com/r/emacs/comments/cpdr6m/any_addi
         '(("\\*Help" (display-buffer-same-window))
           ("\\*Apropos" (display-buffer-same-window))
           ("\\*helpful" (display-buffer-same-window))
+          ("\\*ivy-occur" (display-buffer-same-window))
           ("\\*info" (display-buffer-same-window display-buffer-use-some-window))))
 #+END_SRC
 
