--- a/config.org
+++ b/config.org
@@ -3,7 +3,7 @@
   (defun js/version ()
     "Provides the version number of the init file."
     (interactive)
-    (message "init version 27"))
+    (message "init version 28"))
 #+END_SRC
 
 * credits
@@ -417,7 +417,10 @@ I don't want to confirm every time babel evaluates.
       :ensure t
       :diminish yas-minor-mode
       :config
-      (yas-global-mode 1))
+      (yas-global-mode 1)
+      (when (file-exists-p "~/.emacs.d/local_snippets")
+        ((setq yas-snippet-dirs (append yas-snippet-dirs
+                                        '("~/.emacs.d/local_snippets"))))))
 #+END_SRC
 
 * quick snippets
