--- a/config.org
+++ b/config.org
@@ -496,13 +496,14 @@ Mike Zamansky [[https://github.com/zamansky/using-emacs/blob/master/myinit.org][
                  ("dired" (mode . dired-mode))
                  ("org" (mode . org-mode))
                  ("python" (mode . python-mode))
-                 ("elisp" (mode . emacs-lisp-mode))
+                 ("elisp" (or (mode . emacs-lisp-mode) (mode . lisp-interaction-mode)))
                  ("html" (mode . mhtml-mode))
                  ("css" (mode . css-mode))
                  ("javascript" (mode . js-mode))
                  ("exwm" (mode . exwm-mode))
                  ("eshell" (mode . eshell-mode))
-                 ("magit" (mode . magit-status-mode))))))
+                 ("magit" (mode . magit-status-mode))
+                 ("help" (or (mode . helpful-mode) (mode . Info-mode) (mode . help-mode)))))))
   (add-hook 'ibuffer-mode-hook
             (lambda ()
               (ibuffer-auto-mode 1)
