Add additional ibuffer menu group items

--- a/config.org
+++ b/config.org
@@ -496,14 +496,19 @@ Mike Zamansky [[https://github.com/zamansky/using-emacs/blob/master/myinit.org][
                  ("dired" (mode . dired-mode))
                  ("org" (mode . org-mode))
                  ("python" (mode . python-mode))
-                 ("elisp" (or (mode . emacs-lisp-mode) (mode . lisp-interaction-mode)))
+                 ("elisp" (or (mode . emacs-lisp-mode)
+                              (mode . lisp-interaction-mode)))
                  ("html" (mode . mhtml-mode))
                  ("css" (mode . css-mode))
                  ("javascript" (mode . js-mode))
                  ("exwm" (mode . exwm-mode))
                  ("eshell" (mode . eshell-mode))
-                 ("magit" (mode . magit-status-mode))
-                 ("help" (or (mode . helpful-mode) (mode . Info-mode) (mode . help-mode)))))))
+                 ("magit" (or (mode . magit-status-mode)
+                              (mode . magit-process-mode)
+                              (mode . magit-diff-mode)))
+                 ("help" (or (mode . helpful-mode)
+                             (mode . Info-mode)
+                             (mode . help-mode)))))))
   (add-hook 'ibuffer-mode-hook
             (lambda ()
               (ibuffer-auto-mode 1)
